# zet-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  readme.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.env/: .example  .example.json
.github/workflows/: ci.yml  python-lint-test.yml  release.yml
src/zet/: create.py  db.py  editor_commands.py  env_setup.py  git_commands.py  list.py  main.py  repo.py  settings.py  zet.py
src/zet/templates/: readme.md
test/: test_cli.py  test_create.py  test_db.py  test_editor_commands.py  test_env_setup.py  test_git_commands.py  test_list.py  test_path.py  test_repo.py  test_settings.py  test_zet.py
