[metadata]
name = zet
description = A Zettlekasten command line utility.
long_description = file: readme.md
long_description_content_type = text
author = Matthew Wimberly
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = notes, notetaking, note management

[options]
packages =
    zet
python_requires = >=3.6
package_dir =
    =src
setup_requires =
    setuptools>=42.0
    setuptools-scm>=3.4
zip_safe = no

[options.entry_points]
console_scripts =
    zet=zet.main:main

[options.extras_require]
testing =
    pytest

[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv
